<resources>
    <string name="app_name">BLESampleClient</string>

    <!-- Client -->
    <string name="bluetooth_client">Bluetooth Client</string>
    <string name="scanning">Scanning</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ble_servers">BLE Servers</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disonnect</string>
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="request_timestamp">Request Timestamp</string>

    <!-- Logs -->
    <string name="logs">Logs</string>
    <string name="clear">Clear</string>

    <!-- Google Sample -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

</resources>
